feat(pom.xml, BookControllerTest): add build in pom and add test for saveBook and deleteBook